# QT_cpp_practice

./: README.md
QT_1/: CMakeLists.txt  main.cpp  mainwindow.ui
QT_10_HtmlCSS/: CMakeLists.txt  mainwindow.ui
QT_11_checkboxes/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
QT_12_RadioButtons/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
QT_13_QActionClassToolbarAndMenu/: CMakeLists.txt  Resource.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT_14_ComboBox/: CMakeLists.txt  Resource.qrc  mainwindow.cpp  mainwindow.ui
QT_15_QListWidget/: CMakeLists.txt  Resource.qrc  main.cpp  mainwindow.cpp  mainwindow.ui
QT_16_QDir/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
QT_17_QFile/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
QT_18_QFileDialog/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
QT_19_QTimer/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT_20_QDateTime_Clock/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
QT_21_NotePad/: CMakeLists.txt  Resource.qrc  aboutdialog.cpp  aboutdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT_22_QTabWidget/: CMakeLists.txt  form.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT_3_first_widget_application/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
QT_4_SignalsAndSlots/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
QT_5_QMessageBox/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
QT_6_Layouts/: CMakeLists.txt  mainwindow.ui
QT_7_SplitterSpacerBudyTabs/: CMakeLists.txt  main.cpp  mainwindow.ui
QT_8_SecondWindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  seconddialog.cpp  seconddialog.h
QT_9_LoginApp/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  seconddialog.ui
Qt_2_Hello_world/: Qt_2_Hello_world.pro  main.cpp
